Reset styling for bullet points and fix alignment

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -9,9 +9,11 @@
 	font-size: 16px;
 	line-height: 24px;
 	letter-spacing: 0.18;
+	list-style: initial;
 
 	* {
 		box-sizing: border-box;
+		align-self: center;
 	}
 
 	a {
