--- a/src/components/popup/popup.less
+++ b/src/components/popup/popup.less
@@ -26,7 +26,6 @@
 	max-height: 100%;
 	background: white;
 	display: flex;
-	align-items: center;
 	position: relative;
 	border-radius: 24px;
 	padding-top: 20px;
